[package]
name = "todo"
version = "0.1.0"
authors = ["yk-amarly-20 <y.k.83600260@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.1"
actix-rt = "1.1.1"
thiserror = "1.0.20"
askama = "0.10.3"
